--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -20,6 +20,7 @@
         tools:targetApi="31">
         <activity
             android:name=".LiveViewActivity"
+            android:theme="@style/Theme.AvanteActionBar"
             android:exported="false" />
         <activity
             android:name=".HomePageActivity"
