--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,8 +4,8 @@
 
     <uses-feature
         android:name="android.hardware.camera"
-
         android:required="true" />
+
     <uses-permission android:name="android.permission.CAMERA" />
 
     <application
@@ -19,14 +19,20 @@
         android:theme="@style/Theme.AvanteAR"
         tools:targetApi="31">
         <activity
-            android:name=".LiveViewActivity"
-            android:theme="@style/Theme.AvanteActionBar"
+            android:name=".RegisterActivity"
             android:exported="false" />
         <activity
             android:name=".HomePageActivity"
+            android:exported="false"
+            android:theme="@style/Theme.AvanteAR" />
+        <activity
+            android:name=".LiveViewActivity"
+            android:exported="false"
+            android:theme="@style/Theme.AvanteActionBar" />
+        <activity
+            android:name=".LoginActivity"
             android:exported="true"
-            android:theme="@style/Theme.AppCompat.DayNight.NoActionBar"
-            >
+            android:theme="@style/Theme.AvanteAR">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
